report generation works as expected now
Signed-off-by: Håvard Ottestad <hmottestad@gmail.com>